<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission"
            android:textColor="@color/sky_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/permission_title1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/permission_msg1"
            android:textColor="#808080"
            android:textSize="16sp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="1dp"
            android:background="#808080"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_title2"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/permission_msg2"
            android:textColor="#808080"
            android:textSize="16sp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="1dp"
            android:background="#808080"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_title3"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/permission_msg3"
            android:textColor="#808080"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="자세히 : "
                android:textColor="#808080"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="한성대 개인정보처리방침"
                android:textColor="@color/sky_blue"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="1dp"
            android:background="#808080"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_title4"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/permission_msg4"
            android:textColor="#808080"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/agree_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/skyblue_radius"
            android:layout_marginTop="25dp"
            android:paddingLeft="13dp"
            android:gravity="center"
            android:text="@string/permission_agree"
            android:textColor="#ffffff"
            android:textSize="15sp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/refuse_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:paddingLeft="13dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/permission_refuse"
            android:textColor="#808080"
            android:textSize="15sp"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</ScrollView>
