<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="trycatch.hs.hansungadress.activity.LoginActivity"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/sky_blue"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_guide"
        android:textColor="#808080"
        android:textSize="10sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/gray_selector"
        android:layout_marginTop="10dp"
        android:paddingLeft="13dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:hint="@string/id_hint"
        android:textColor="#000000"
        android:textSize="15sp"
        android:maxLength="6"/>

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/gray_selector"
        android:layout_marginTop="12dp"
        android:paddingLeft="13dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#f8f8f8"
        android:layout_marginTop="25dp"
        android:paddingLeft="13dp"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/start_msg"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/guide_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:lineSpacingExtra="5dp"/>

    <EditText
        android:id="@+id/dummy"
        android:layout_width="0dp"
        android:layout_height="0dp" />

</LinearLayout>
