<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/sky_blue">
        
        <ImageView
            android:id="@+id/setting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/settings"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/address_activity"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/search_cancel_btn"
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:layout_marginRight="14dp"
            android:background="#00000000"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="right|center_vertical"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/gray_radius"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="9.5dp"
                android:src="@drawable/search"/>

            <EditText
                android:id="@+id/et_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_hint"
                android:textSize="15sp"
                android:background="#00000000"
                android:imeOptions="actionSearch"
                android:inputType="text"/>

            <ImageView
                android:id="@+id/clear_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/clear"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/favorite_layout"
            layout="@layout/favorite_layout"
            android:visibility="visible"/>

        <include
            android:id="@+id/search_result_layout"
            layout="@layout/search_layout"
            android:visibility="invisible"/>

    </FrameLayout>

</LinearLayout>